# svo_edgelete_ros

./: CMakeLists.txt  package.xml
config/: air2.yaml  dji47.yaml  euroc_mh0x.yaml  icl_nuim.yaml  kinect.yaml  tum.yaml
include/svo/: getfile.h
src/: frame_handler_mono.cpp
test/: main.cpp
